--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
 	"main": "node_modules/expo/AppEntry.js",
 	"private": true,
+	"scripts": {
+		"test": "node_modules/.bin/jest --watch"
+	},
+	"jest": {
+		"preset": "jest-expo"
+	},
 	"dependencies": {
 		"expo": "^24.0.0",
 		"react": "16.0.0",
-		"react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+		"react-native":
+			"https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
 		"react-navigation": "^1.0.0-beta.26"
+	},
+	"devDependencies": {
+		"jest-expo": "^24.0.0"
 	}
 }
