--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 	},
 	"dependencies": {
 		"expo": "^24.0.0",
+		"glamorous-native": "^1.3.0",
 		"react": "16.0.0",
-		"react-native":
-			"https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
 		"react-navigation": "^1.0.0-beta.26"
 	},
 	"devDependencies": {
