added safeviewarea wrapper, statusbar, Date component and fonts

--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
 		"test": "node_modules/.bin/jest --watch"
 	},
 	"jest": {
-		"preset": "jest-expo"
+		"preset": "react-native",
+		"transformIgnorePatterns": [
+			"node_modules/(?!(jest-)?react-native|glamorous-native)"
+		]
 	},
 	"dependencies": {
 		"expo": "^24.0.0",
 		"glamorous-native": "^1.3.0",
 		"react": "16.0.0",
-		"react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+		"react-native":
+			"https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
 		"react-navigation": "^1.0.0-beta.26"
 	},
 	"devDependencies": {
