--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 		]
 	},
 	"dependencies": {
+		"@mapbox/react-native-mapbox-gl": "^6.0.3-rc1",
+		"axios": "^0.17.1",
 		"expo": "^24.0.0",
 		"glamorous-native": "^1.3.0",
 		"react": "16.0.0",
-		"react-native":
-			"https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
 		"react-navigation": "^1.0.0-beta.26"
 	},
 	"devDependencies": {
